--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "style": "sass --watch src/sass/style.scss src/sass/style.css",
     "build": "webpack --mode production",
-    "dev": "webpack --mode development",
+    "dev": "webpack serve --mode development",
     "start": "webpack serve",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
