--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^5.0.1",
     "gh-pages": "^3.1.0",
     "html-loader": "^1.3.2",
