--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,16 @@
     "max-len": [1, 120, 2, {
       "ignoreComments": true
     }],
-    "allowForLoopAfterthoughts": true
+    "no-plusplus": ["error", {
+      "allowForLoopAfterthoughts": true
+    }],
+    "no-restricted-syntax": ["error", "BinaryExpression[operator='in']"],
+    "no-param-reassign": [2, {
+      "props": false
+    }],
+    "class-methods-use-this": 0,
+    "no-unused-vars": ["error", {
+      "args": "none"
+    }]
   }
 }
