--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "style": "sass --watch src/sass/style.scss src/sass/style.css",
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development ",
+    "eslint ": "eslint ./src/js/*.js",
+    "lint:fix ": "eslint ./src/js/*.js --fix",
     "start": "webpack serve",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
@@ -26,17 +28,26 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-webpack-plugin": "^2.3.0",
     "gh-pages": "^3.1.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
     "node-sass": "^5.0.0",
+    "prettier": "^2.1.2",
     "sass-loader": "^10.0.5",
-    "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
